More epic improvements

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,8 +6,31 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+@mixin dark-glassmorphism {
+    backdrop-filter: blur(var(--blur, 2px)) saturate(200%);
+    -webkit-backdrop-filter: blur(14px) saturate(200%);
+    background-color: rgba(17, 25, 40, 0.63);
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    color: white;
+}
+
 @mixin flex {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@mixin fade-out {
+    -webkit-mask-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 1)
+    );
+    mask-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 1)
+    );
 }
