--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,13 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
-
+@mixin glassmorphism-opaque {
+    background: rgba(255, 255, 255, 0.6);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
 @mixin dark-glassmorphism {
     backdrop-filter: blur(var(--blur, 2px)) saturate(200%);
     -webkit-backdrop-filter: blur(14px) saturate(200%);
